# voxeller

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  CMakePresets.json  README.md  build.sh  build_dependencies.sh  build_info.txt  features.txt  ndk_download.sh
assets/: iconProject.blend  iconProject.blend1
src/Editor/GUI/Utils/: DragAndDrop.cpp
src/Editor/Time/: Time.cpp  Time.h
src/Unvoxeller/: AssimpExporter.cpp  AssimpSceneWritter.cpp  CMakeLists.txt  FactoryBase.cpp  File.cpp  GreedyMesher.cpp  MeshBuilder.cpp  MesherFactory.cpp  Unvoxeller.cpp  VertexMerger.cpp  VoxParser.cpp  VoxelLikeMesher.cpp  mesh_texturing.cpp
src/Unvoxeller/Math/: VoxMatrix.cpp  VoxQuat.cpp  VoxTransforms.cpp  VoxVector.cpp
src/Unvoxeller/TextureGenerators/: AtlasTextureGenerator.cpp  TextureGeneratorFactory.cpp
src/Unvoxeller/includes/Unvoxeller/: AssimpSceneWritter.cpp  AssimpSceneWritter.h  ExporterBase.h  FaceRect.h  FactoryBase.h  File.h  GreedyMesher.h  MeshBuilder.h  ScenePostprocessing.h  StreamReader.h  Unvoxeller.h  VertexMerger.h  VoxParser.h  VoxelTypes.h  api.h  mesh_texturing.h
src/Unvoxeller/includes/Unvoxeller/Data/: ConvertOptions.h  ConvertResults.h  ExportConfig.h  ExportOptions.h  ExportResults.h  MemData.h  MeshInfo.h  MeshType.h  TextureData.h  TextureFormat.h  TextureType.h  UnvoxMesh.h  UnvoxScene.h  VoxMesh.h
src/Unvoxeller/includes/Unvoxeller/Log/: Log.cpp  Log.h
src/Unvoxeller/includes/Unvoxeller/Math/: VoxMath.h  VoxMatrix.h  VoxQuat.h  VoxTransforms.h  VoxVector.h
src/Unvoxeller/includes/Unvoxeller/Mesher/: GreedyMesher.h  MesherBase.h  MesherFactory.h  PaletteMesher.h  VoxelLikeMesher.h
src/Unvoxeller/includes/Unvoxeller/TextureGenerators/: AtlasTextureGen.h  TextureGeneratorBase.h  TextureGeneratorFactory.h
src/core/: mesh_texturing.cpp  vox_mesh_builder.cpp  voxeller.cpp
src/core/includes/voxeller/: api.h  vox_math_types.h  vox_mesh_builder.h  vox_parser.h  voxeller.h
src/editor/: CMakeLists.txt  NativeMenu.h  VoxUtils.cpp  VoxUtils.h  main.cpp
src/editor/Data/: VoxFileToProcessData.h
src/editor/GUI/: GUIData.h  GuiData.cpp  ImGuiInit.cpp  ImGuiInit.h  Screen.cpp  Screen.h  VoxGUI.cpp  VoxGUI.h
src/editor/GUI/Utils/: Cursor.cpp  Cursor.h  DropHover.cpp  DropHover.mm  DropHoverEvents.h  FileDialog.cpp  FileDialog.h  GUIUtils.h  TextureLoader.cpp  TextureLoader.h
src/editor/GUI/Views/: ViewBase.h  VoxToProcessView.cpp  VoxToProcessView.h
src/editor/Rendering/: Camera.cpp  Camera.h  GfxDevice.cpp  GfxDevice.h  Mesh.cpp  Mesh.h  MeshDescriptor.h  MeshRenderType.h  PipelineConfigurations.cpp  PipelineConfigurations.h  PipelineData.h  PipelineRenderType.h  RenderTarget.cpp  RenderTarget.h  RenderTargetDescriptor.h  RenderableObject.cpp  RenderableObject.h  RenderableTransform.cpp  RenderableTransform.h  RendererState.h  RenderingSystem.cpp  RenderingSystem.h  Shader.h  ShaderDescriptor.h  ShadersLibrary.cpp  ShadersLibrary.h  Texture.cpp  Texture.h  TextureDescriptor.h  VoxObject.cpp  VoxObject.h
src/editor/Rendering/OpenGL/: GLFrameBuffer.cpp  GLFrameBuffer.h  GLInclude.h  GLMesh.cpp  GLMesh.h  GLRendererStateData.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  OpenGLDevice.cpp  OpenGLDevice.h
src/voxeller/: CMakeLists.txt  File.cpp  GreedyMesher.cpp  VertexMerger.cpp  VoxMatrix.cpp  VoxParser.cpp  VoxVector.cpp  greedyTest.cpp  mesh_texturing.cpp  vox_math_types.cpp  vox_mesh_builder.cpp  vox_parser.cpp  voxeller.cpp
src/voxeller/Math/: VoxMatrix.cpp  VoxQuat.cpp  VoxTransforms.cpp  VoxVector.cpp
src/voxeller/includes/voxeller/: DefaultPalette.h  File.h  GreedyMesher.h  GreedyTest.h  TjunctionsFixer.h  Types.h  VoxMath.h  VoxMatrix.h  VoxParser.h  api.h  mesh_texturing.h  vox_math_types.h  vox_mesh_types.h  vox_types.h  voxeller.h
src/voxeller/includes/voxeller/Log/: Log.cpp  Log.h
src/voxeller/includes/voxeller/Math/: VoxMath.h  VoxMatrix.h  VoxQuat.h  VoxTransforms.h  VoxVector.h
testvox/: T-Rex_anim.vox  chr_knight.vox  custom.vox  monu3.vox  room.vox  teapot.vox
third/editor/gl/: glad.cpp  glad.h
third/shared/assimp/: CMakeLists.txt
third/shared/assimp/contrib/unzip/: ioapi.c
